--- a/amz/index.html
+++ b/amz/index.html
@@ -35,7 +35,7 @@
                 <div class="certify">
                     <div class="cert">This to certify that</div>
                     <div class="details">
-                    <span>Student of <span style="width:100px;margin-left: 210px;"></span></span>
+                    <span style="color: black">Amit Patel</span>
                     <br>
                     <span>has Participated in</span>
                     <br>
